--- a/Data Analysis to Results/Subset Analyses | Physical | 2 Groups | All new shots.ipynb
+++ b/Data Analysis to Results/Subset Analyses | Physical | 2 Groups | All new shots.ipynb
@@ -937,6 +937,7 @@
     "* `ZEFFNEO`: Plasma effective charge as determined by neo-classical resistivity.\n",
     "* `PRAD`: Total radiated power as measured by Bolometer. \n",
     "\n",
+    "\n",
     "**TOKAMAK VARIABLES**\n",
     "\n",
     "* `TOK`:  This variable designates which tokamak has supplied the data.\n",
@@ -953,7 +954,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "impurities = [\"EVAP\",\"ZEFF\",\"ZEFFNEO\",\"PRAD\",\"ENBI\"]\n",
+    "impurities = [\"EVAP\",\"ZEFF\",\"ZEFFNEO\",\"PRAD\"]\n",
     "TOK_characteristics = [\"TOK\",\"DIVNAME\",\"WALMAT\",\"DIVMAT\",\"LIMMAT\"]"
    ]
   },
@@ -1022,7 +1023,9 @@
     "\n",
     "**VARIABLES**\n",
     "\n",
-    "* `POHM`: Total Ohmic power. "
+    "* `POHM`: Total Ohmic power. \n",
+    "* `PFLOSS`:  Neutral beam power that is lost from the plasma through charge exchange and unconfined orbits.\n",
+    "* `PLTH`: Estimated Loss Power corrected for charge exchange and unconfined orbit losses.\n"
    ]
   },
   {
