progress in classification for research variables and entropy analysis

--- a/Clustering/Feature_Selection/Entropy_of_Dataset_notes_for_dev.ipynb
+++ b/Clustering/Feature_Selection/Entropy_of_Dataset_notes_for_dev.ipynb
@@ -680,14 +680,9 @@
     "    D_{ij} = \\left[ \\sum^M_{k=1} \\: D^k_{ij}\\right]^{1/2}\n",
     "$$\n",
     "\n",
-    "Where $F_k$ is the $k$-th column representing the $k$-th feature. With $k=1,\\dots,M$ The $x_{ik}$ is the $i$-th point of the $k$-th feature; the same for $j$. With $i$,$j=1\\ldots,N$. And $N$ being the total points of observations."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7a0fbe9a",
-   "metadata": {},
-   "source": [
+    "Where $F_k$ is the $k$-th column representing the $k$-th feature. With $k=1,\\dots,M$ The $x_{ik}$ is the $i$-th point of the $k$-th feature; the same for $j$. With $i$,$j=1\\ldots,N$. And $N$ being the total points of observations.\n",
+    "\n",
+    "\n",
     "### Computing the similarity between two points\n",
     "\n",
     "Defined as:\n",
@@ -846,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
