--- a/Classification/cuML Tuning/Other_Variables.ipynb
+++ b/Classification/cuML Tuning/Other_Variables.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
-    "path = \"../data/\""
+    "path = \"../../data/\""
    ]
   },
   {
@@ -618,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
