--- a/Entropy for Feature Selection/Entropy_of_Dataset_notes_for_debugging.ipynb
+++ b/Entropy for Feature Selection/Entropy_of_Dataset_notes_for_debugging.ipynb
@@ -610,8 +610,8 @@
     }
    ],
    "source": [
-    "R = pd.read_csv(\"../data/R.csv\") #From DB5 dataset | log data\n",
-    "subset_ids = pd.read_csv(\"../data/R_ids_alpha_0.6556.csv\")\n",
+    "R = pd.read_csv(\"data/R.csv\") #From DB5 dataset | log data\n",
+    "subset_ids = pd.read_csv(\"data/R_ids_alpha_0.6556.csv\")\n",
     "data_complete = (R[R.id.isin(subset_ids.id.values)]).reset_index(drop=True)\n",
     "data_complete"
    ]
@@ -818,8 +818,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a34259f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cupy as cp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd1ca276",
    "metadata": {},
    "outputs": [],
    "source": []
