--- a/STDB5-Feature_Analysis.ipynb
+++ b/STDB5-Feature_Analysis.ipynb
@@ -185,6 +185,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "56b2c4a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plasma_characteristics = [\"QCYL5\",\"BEIMHD\",\"PREMAG\",\"LHTIME\",\"HYBRID\",\n",
+    "                          \"CONFIG\",\"DWDIA\",\"WMHD\",\"TORQ\",\"KAREA\", \"EPS\",\"MEFF\",\"VOL\",\"LCOULOMB\"] \n",
+    "TOK_characteristics = [\"TOK\",\"DIVNAME\",\"WALMAT\",\"DIVMAT\",\"LIMMAT\",\"AMIN\",\"IP\"]\n",
+    "ELM = [\"ELMTYPE\",\"ELMFREQ\"]\n",
+    "heating = [\"PECRH\", \"PICRH\", \"ICSCHEME\",\"AUXHEAT\",\"ECHMODE\",\"PELLET\"]\n",
+    "impurities = [\"EVAP\",\"ZEFF\",\"ZEFFNEO\",\"PRAD\",\"POHM\",\"ENBI\",\"PNBI\"]\n",
+    "power = [\"PLTH\",\"PFLOSS\"]\n",
+    "temperatures = [\"TAV\",\"TEV\",\"TIV\"]\n",
+    "fast_particles = [\"NESOL\",\"WFFORM\",\"WFICFORM\",\"OMEGACYCL\"] \n",
+    "research_features = ['NEL','TAV','BT','RHOSTAR','NUSTAR','BETASTAR']\n",
+    "\n",
+    "\n",
+    "features = list(set(plasma_characteristics + TOK_characteristics + ELM + heating + \\\n",
+    "                       impurities + power  + fast_particles + research_features))\n",
+    "len(features)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fedcecbc",
    "metadata": {},
@@ -337,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
