--- a/STDB5-Feature_Analysis.ipynb
+++ b/STDB5-Feature_Analysis.ipynb
@@ -341,16 +341,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c0c63bc",
+   "execution_count": 3,
+   "id": "021cfa76",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "power = [\"PLTH\",\"PFLOSS\"]\n",
+    "temperatures = [\"TAV\",\"TEV\",\"TIV\"]\n",
+    "fast_particles = [\"NESOL\",\"WFFORM\",\"WFICFORM\",\"OMEGACYCL\",\"NEL\"] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9c0c63bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['NEL', 'NESOL', 'OMEGACYCL', 'WFFORM', 'WFICFORM']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(fast_particles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "48f038f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(fast_particles)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48f038f5",
+   "id": "e75c1b7b",
    "metadata": {},
    "outputs": [],
    "source": []
