--- a/Entropy for Feature Selection/All_Variables.ipynb
+++ b/Entropy for Feature Selection/All_Variables.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "ffb9da84",
    "metadata": {},
    "outputs": [],
@@ -136,10 +136,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   5363.</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sat, 29 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
+       "  <th>Date:</th>             <td>Sun, 30 Apr 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>21:49:32</td>     <th>  Log-Likelihood:    </th> <td>  461.74</td>\n",
+       "  <th>Time:</th>                 <td>13:39:18</td>     <th>  Log-Likelihood:    </th> <td>  461.74</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2776</td>      <th>  AIC:               </th> <td>  -905.5</td>\n",
@@ -209,8 +209,8 @@
        "Dep. Variable:                      y   R-squared:                       0.939\n",
        "Model:                            OLS   Adj. R-squared:                  0.939\n",
        "Method:                 Least Squares   F-statistic:                     5363.\n",
-       "Date:                Sat, 29 Apr 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        21:49:32   Log-Likelihood:                 461.74\n",
+       "Date:                Sun, 30 Apr 2023   Prob (F-statistic):               0.00\n",
+       "Time:                        13:39:18   Log-Likelihood:                 461.74\n",
        "No. Observations:                2776   AIC:                            -905.5\n",
        "Df Residuals:                    2767   BIC:                            -852.1\n",
        "Df Model:                           8                                         \n",
@@ -382,7 +382,7 @@
    "id": "4873807d",
    "metadata": {},
    "source": [
-    "$\\delta_{ij}(x^k)\\:\\rightarrow$ `np.frompyfunc( lambda x,y: x-y, 2, 1).reduce( np.array( np.meshgrid(F_k,F_k) ) )`"
+    "$\\delta_{ij}(x^k)\\:\\rightarrow$ `np.frompyfunc( lambda x,y: x==y, 2, 1).reduce( np.array( np.meshgrid(F_k,F_k) ) )`"
    ]
   },
   {
