--- a/Tokamak Interpretation/Old/Subset Analyses | Physical | 2 Groups | All new shots.ipynb
+++ b/Tokamak Interpretation/Old/Subset Analyses | Physical | 2 Groups | All new shots.ipynb
@@ -94,7 +94,23 @@
     "\n",
     "The Bohm diffusivity is a fundamental parameter that arises from theoretical considerations and is often used as a reference diffusivity in plasma physics. It represents an estimate of the minimal transport that can occur due to the random motion of charged particles in a plasma.\n",
     "\n",
-    "The Bohm-normalized diffusivity is an important parameter in the study of plasma transport in tokamaks, as it provides insights into the efficiency of heat and particle transport in the plasma. A value of $\\chi_{\\text{Bohm}}$ close to 1 indicates that the actual diffusivity is similar to the Bohm diffusivity, suggesting that transport in the tokamak is close to the minimal level expected from random particle motion. Values of $\\chi_{\\text{Bohm}}$ significantly different from 1 can indicate the presence of anomalous transport, which is transport that deviates from the expected behavior based on classical physics and is often associated with the presence of turbulence in the plasma. Understanding and controlling plasma transport, including the Bohm-normalized diffusivity, is a key challenge in achieving practical magnetic confinement fusion for future energy production."
+    "The Bohm-normalized diffusivity is an important parameter in the study of plasma transport in tokamaks, as it provides insights into the efficiency of heat and particle transport in the plasma. A value of $\\chi_{\\text{Bohm}}$ close to 1 indicates that the actual diffusivity is similar to the Bohm diffusivity, suggesting that transport in the tokamak is close to the minimal level expected from random particle motion. Values of $\\chi_{\\text{Bohm}}$ significantly different from 1 can indicate the presence of anomalous transport, which is transport that deviates from the expected behavior based on classical physics and is often associated with the presence of turbulence in the plasma. Understanding and controlling plasma transport, including the Bohm-normalized diffusivity, is a key challenge in achieving practical magnetic confinement fusion for future energy production.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Coulomb Logarithm**\n",
+    "\n",
+    " Is a measure of the strength of Coulomb interactions between charged particles in a plasma.\n",
+    " \n",
+    " * A \"large\" value of ln Λ indicates that the Coulomb interactions between particles are weak, and that particles are more likely to undergo long-range collisions rather than close encounters. In this regime, the mean free path of particles is long, and the plasma can behave like a fluid. Conversely, a \"small\" value of ln Λ indicates that the Coulomb interactions are strong, and that close encounters between particles are more frequent. In this regime, the mean free path of particles is short, and the plasma can behave like a kinetic gas.\n",
+    " \n",
+    "* The typical range of values for ln Λ in a tokamak plasma is between 5 and 20, depending on the plasma density and temperature. However, large values of ln Λ can be much larger than this range, and are typically associated with low-density, high-temperature plasmas, such as those found in the solar corona or in laboratory fusion experiments. ln Λ values of 50 or greater are considered \"large\" and are typical in such plasmas.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Safety Factor**\n",
+    "\n",
+    "* A \"large\" value of q(0.95) indicates that the magnetic field lines in the plasma are tightly wound and that the plasma is more stable against MHD instabilities. The typical range of q(0.95) in tokamak plasmas is between 1 and 3. However, large values of q(0.95) can be much larger than this range, and are typically associated with high-performance, high-confinement plasmas. Typical large values of q(0.95) can be above 5 or even 10 in such plasmas."
    ]
   },
   {
@@ -1053,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
