--- a/STDB5-Feature_Analysis.ipynb
+++ b/STDB5-Feature_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3f691e30",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4f834bdc",
    "metadata": {},
    "outputs": [],
@@ -44,22 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b09db631",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40.69% of the data decreased alpha_R\n",
-      "59.31% of the data did not decrease alpha_R\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Obtained from Optimization\n",
     "min_subset_ids = pd.read_csv(path+\"id_vs_frequency_decreasing_ds.csv\")\n",
+    "\n",
+    "raw_DB5 = pd.read_excel(path+\"HDB5V2.3.xlsx\")\n",
+    "\n",
     "\n",
     "DB2 = pd.read_csv(path+\"DB2P8.csv\")\n",
     "DB5 = pd.read_csv(path+\"SELDB5_SVD.csv\", low_memory=False) \n",
@@ -81,21 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "e846768d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_DB5.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7480b018",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6252"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(DB5)"
    ]
@@ -136,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9ae01609",
    "metadata": {},
    "outputs": [],
@@ -161,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ecce5188",
    "metadata": {},
    "outputs": [],
@@ -175,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5da1721c",
    "metadata": {},
    "outputs": [],
@@ -186,21 +179,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "56b2c4a9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "48"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plasma_characteristics = [\"QCYL5\",\"BEIMHD\",\"PREMAG\",\"LHTIME\",\"HYBRID\",\n",
     "                          \"CONFIG\",\"DWDIA\",\"WMHD\",\"TORQ\",\"KAREA\", \"EPS\",\"MEFF\",\"VOL\",\"LCOULOMB\"] \n",
@@ -231,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "30918416",
    "metadata": {},
    "outputs": [],
@@ -242,69 +224,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c1294ebb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['ASDEX', 'AUG', 'AUGW', 'CMOD', 'COMPASS', 'D3D', 'JET', 'JETILW',\n",
-       "       'JFT2M', 'JT60U', 'MAST', 'NSTX', 'PBXM', 'PDX', 'START', 'TCV',\n",
-       "       'TDEV', 'TFTR'], dtype=object)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DB5.TOK.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b923fb1b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['DV-IPRE', 'DV-IPOST', 'DV-II-C', 'DIV-I', 'DIV-II', 'DIV-IIb',\n",
-       "       'DIV-IIc', 'DIV-IId', 'DIV-III', 'NONAME', 'DIV1', 'OPEN', 'ADP',\n",
-       "       'RDP', 'MARK0', 'MARKI', 'MARKIIA', 'MARKIIAP', 'MARKGB',\n",
-       "       'MARKGBSR', 'ILW', 'RIB', 'PLATES1', 'UNKNOWN'], dtype=object)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DB5[\"DIVNAME\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b954b6bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['DV-I', 'DV-II', 'DV-III', 'NONAME', 'DIV1', 'OPEN', 'ADP', 'RDP',\n",
-       "       'MARK', 'ILW', 'RIB', 'PLATES1', 'UNKNOWN'], dtype=object)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DB5[\"DIVNAME\"] = DB5[\"DIVNAME\"].str.replace(\"(DIV-I)|(DV-IPRE)|(DV-IPOST)\",\n",
     "                                            \"DV-I\",regex=True)\n",
@@ -318,30 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "62af61e3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['DV-I', 'DV-II', 'DV-IIb', 'DV-IIc', 'DV-IId', 'DV-III', 'NONAME',\n",
-       "       'DIV1', 'OPEN', 'ADP', 'RDP', 'MARK', 'MARKIA', 'MARKIAP',\n",
-       "       'MARKSR', 'ILW', 'RIB', 'PLATES1', 'UNKNOWN'], dtype=object)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DB5[\"DIVNAME\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "021cfa76",
    "metadata": {},
    "outputs": [],
@@ -353,50 +283,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9c0c63bc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['NEL', 'NESOL', 'OMEGACYCL', 'WFFORM', 'WFICFORM']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sorted(fast_particles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "48f038f5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(fast_particles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e75c1b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strrr = \"'WFICFORM', 'WFFORM', 'ZEFFNEO', 'DWDIA', 'RHOSTAR', 'POHM', 'BETASTAR', 'NEL', 'WMHD', 'TAV', 'NUSTAR', 'PFLOSS', 'EPS', 'PLTH', 'QCYL5'\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d1d9e553",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'WFICFORM, WFFORM, ZEFFNEO, DWDIA, RHOSTAR, POHM, BETASTAR, NEL, WMHD, TAV, NUSTAR, PFLOSS, EPS, PLTH, QCYL5'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strrr.replace(\"'\",\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b76c170b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"'WFICFORM', 'WFFORM', 'ZEFFNEO', 'DWDIA', 'RHOSTAR', 'POHM', 'BETASTAR', 'NEL', 'WMHD', 'TAV', 'NUSTAR', 'PFLOSS', 'EPS', 'PLTH', 'QCYL5'\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strrr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b21a483",
    "metadata": {},
    "outputs": [],
    "source": []
