--- a/Entropy/All_Variables_large_dataset_alpha0.6357.ipynb
+++ b/Entropy/All_Variables_large_dataset_alpha0.6357.ipynb
@@ -34,7 +34,7 @@
    "id": "d6c10c77",
    "metadata": {},
    "source": [
-    "# NO RESEARCH VARIABLES\n",
+    "# ALL VARIABLES | big dataset\n",
     "\n",
     "This notebook helps me understand if there is a structure among the variables of interest. "
    ]
@@ -136,10 +136,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   5363.</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Thu, 04 May 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
+       "  <th>Date:</th>             <td>Sat, 06 May 2023</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>13:24:07</td>     <th>  Log-Likelihood:    </th> <td>  461.74</td>\n",
+       "  <th>Time:</th>                 <td>19:05:10</td>     <th>  Log-Likelihood:    </th> <td>  461.74</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>  2776</td>      <th>  AIC:               </th> <td>  -905.5</td>\n",
@@ -209,8 +209,8 @@
        "Dep. Variable:                      y   R-squared:                       0.939\n",
        "Model:                            OLS   Adj. R-squared:                  0.939\n",
        "Method:                 Least Squares   F-statistic:                     5363.\n",
-       "Date:                Thu, 04 May 2023   Prob (F-statistic):               0.00\n",
-       "Time:                        13:24:07   Log-Likelihood:                 461.74\n",
+       "Date:                Sat, 06 May 2023   Prob (F-statistic):               0.00\n",
+       "Time:                        19:05:10   Log-Likelihood:                 461.74\n",
        "No. Observations:                2776   AIC:                            -905.5\n",
        "Df Residuals:                    2767   BIC:                            -852.1\n",
        "Df Model:                           8                                         \n",
@@ -459,10 +459,12 @@
    "id": "e0f388d2",
    "metadata": {},
    "source": [
-    "### Comparing with the case not containing research variables\n",
+    "### Comparing with the case of small dataset\n",
+    "\n",
     "\n",
     "```Python\n",
-    "['ZEFFNEO', 'EPS', 'WFICFORM', 'BETASTAR', 'RHOSTAR', 'DWDIA', 'KAREA', 'NEL', 'OMEGACYCL', 'ENBI', 'WMHD', 'AMIN', 'TAV', 'WFFORM', 'PICRH', 'PLTH', 'MEFF', 'QCYL5', 'NUSTAR', 'PNBI', 'VOL', 'LCOULOMB', 'LHTIME', 'PFLOSS', 'BT', 'BEIMHD', 'POHM', 'ZEFF', 'PECRH', 'ELMFREQ', 'PRAD', 'NESOL', 'TORQ', 'TOK', 'WALMAT', 'LIMMAT', 'HYBRID', 'EVAP', 'ECHMODE', 'PREMAG', 'DIVMAT', 'PELLET', 'ELMTYPE', 'ICSCHEME', 'AUXHEAT', 'CONFIG']\n",
+    "['WFICFORM', 'WFFORM', 'ZEFFNEO', 'DWDIA', 'RHOSTAR', 'POHM', 'BETASTAR', 'NEL', 'WMHD', 'TAV', 'NUSTAR', 'PFLOSS', 'EPS', 'PLTH', 'QCYL5', 'MEFF', 'OMEGACYCL', 'LCOULOMB', 'PICRH', 'TIV', 'IP', 'PRAD', 'PNBI', 'KAREA', 'ENBI', 'TEV', 'AMIN', 'ELMFREQ', 'PECRH', 'TORQ', 'ZEFF', 'VOL', 'NESOL', 'BT', 'BEIMHD', 'DIVNAME', 'TOK', 'LHTIME', 'WALMAT', 'EVAP', 'PREMAG', 'LIMMAT', 'HYBRID', 'DIVMAT', 'ELMTYPE', 'ECHMODE', 'ICSCHEME', 'PELLET', 'CONFIG', 'AUXHEAT']\n",
+    "\n",
     "```"
    ]
   },
