--- a/Optimization/group_analyses_on_reduced_DS_random_sampling.ipynb
+++ b/Optimization/group_analyses_on_reduced_DS_random_sampling.ipynb
@@ -1453,7 +1453,7 @@
     "\n",
     "for i in range(num_samples):\n",
     "    for j in range(600, max_amount_):\n",
-    "        R_sampled = DB5_decreas_pts.sample(n=j, weights='decreased', random_state=27*(i + 101))\n",
+    "        R_sampled = DB5_decreas_pts.sample(n=j, weights='decreased', random_state=27*(i + 101), replace=False)\n",
     "        SAMPLES_[i,j-1] = get_regression_np(R_sampled)[1].params[5]"
    ]
   },
@@ -1655,7 +1655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
